# sylpheed-autoenc-plugin

./: ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autoenc.c  autoenc.h  autogen.sh  config.h.in  configure  configure.ac  makewin32.sh  send_enc.h
po/: POTFILES.in  autoenc.pot  ja.gmo  ja.po
